--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
         <a href="#" class="list-group-item list-group-item-action active">
     Список игр
   </a>
+        <a href="game0.html" class="list-group-item list-group-item-action">Пробный урок</a>
         <a href="game1.html" class="list-group-item list-group-item-action">Учебная база альянса</a>
         <a href="game2.html" class="list-group-item list-group-item-action">Галактическая система координат</a>
         <a href="game3.html" class="list-group-item list-group-item-action">Конструктор уровней</a>
         <a href="game4.html" class="list-group-item list-group-item-action">Зима</a>
-        <a href="game5.html" class="list-group-item list-group-item-action">Game 5 Test</a>
+        <a href="game5.html" class="list-group-item list-group-item-action">Game5</a>
+        <a href="game6.html" class="list-group-item list-group-item-action">Game6</a>
     </div>
     </div>
     <div class="col-sm">
