--- a/game0.html
+++ b/game0.html
@@ -17,6 +17,7 @@
   <script type="text/javascript" src="js/lib/blockly/blocks_compressed.js"></script>
   <script type="text/javascript" src="js/lib/blockly/javascript_compressed.js"></script>
   <script type="text/javascript" src="js/lib/blockly/msg/js/ru.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/hammer.js/1.0.6/hammer.min.js"></script>
   <script type="text/javascript" src="js/config.js"></script>
   <script type="text/javascript" src="js/maze.js"></script>
   <script type="text/javascript" src="js/pegman.js"></script>
@@ -40,8 +41,6 @@
     <div id="layer1" style="z-index: 0;">
       <div class="canvas" id="canvasContainer"></div>
     </div>
-
-
   </div>
   <div id="layer2" style="z-index: 1;">
     <div class="canvas" id="blocklyDiv" style="position: absolute"></div>
@@ -113,6 +112,15 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
   <script>
+
+
+    var element = document.getElementById('blocklyDiv');
+    var hammertime = Hammer(element).on("pinch", function (event) {
+      player.scale.set(event.gesture.scale);
+
+    });
+
+
 
     $('input[type=radio][name=options]').change(function () {
       var optionValue = this.id;
