--- a/game0.html
+++ b/game0.html
@@ -116,8 +116,9 @@
 
     var element = document.getElementById('blocklyDiv');
     var hammertime = Hammer(element).on("pinch", function (event) {
-      player.scale.set(event.gesture.scale);
-
+      
+      TopDownGame.game.camera.scale.x = event.gesture.scale;
+      TopDownGame.game.camera.scale.y = event.gesture.scale;
     });
 
 
@@ -148,8 +149,7 @@
       { toolbox: document.getElementById('toolbox') });
 
     Blockly.BlockSvg.START_HAT = true;
-    Blockly.Xml.domToWorkspace(document.getElementById('startBlocks'),
-      workspace);
+    Blockly.Xml.domToWorkspace(document.getElementById('startBlocks'), workspace);
     workspace.addChangeListener(Blockly.Events.disableOrphans);
     var onresize = function (e) {
       // Compute the absolute coordinates and dimensions of blocklyArea.
