--- a/game1.html
+++ b/game1.html
@@ -136,8 +136,7 @@
       { toolbox: document.getElementById('toolbox') });
 
     Blockly.BlockSvg.START_HAT = true;
-    Blockly.Xml.domToWorkspace(document.getElementById('startBlocks'),
-      workspace);
+    Blockly.Xml.domToWorkspace(document.getElementById('startBlocks'), workspace);
     workspace.addChangeListener(Blockly.Events.disableOrphans);
     var onresize = function (e) {
       // Compute the absolute coordinates and dimensions of blocklyArea.
