--- a/game010.html
+++ b/game010.html
@@ -41,9 +41,9 @@
 
   <div class="container">
     <div class="leftside">
-      
+
     </div>
-    <div class="rightside">
+    <div class="rightside" id="rightside">
       <div class="canvas" id="canvasContainer"></div>
     </div>
   </div>
@@ -56,37 +56,37 @@
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-  crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-  crossorigin="anonymous"></script>
-<script>
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+  <script>
 
 
 
 
 
-  $('input[type=radio][name=options]').change(function () {
-    var optionValue = this.id;
-    if (optionValue == "option05") {
-      timeScale = 0.5;
-    } else if (optionValue == "option2") {
-      timeScale = 2;
-    } else if (optionValue == "option6") {
-      timeScale = 6;
-    } else if (optionValue == "option1") {
-      timeScale = 1;
-    }
+    $('input[type=radio][name=options]').change(function () {
+      var optionValue = this.id;
+      if (optionValue == "option05") {
+        timeScale = 0.5;
+      } else if (optionValue == "option2") {
+        timeScale = 2;
+      } else if (optionValue == "option6") {
+        timeScale = 6;
+      } else if (optionValue == "option1") {
+        timeScale = 1;
+      }
 
-    try {
-      Pegman.tween.timeScale = timeScale;
-    } catch {
+      try {
+        Pegman.tween.timeScale = timeScale;
+      } catch {
 
-    }
+      }
 
-  });
-  var scene;
+    });
+    var scene;
 
-</script>
+  </script>
 </body>
 
 </html>
