bug: flipped barrels; dim: uncheck next lesson on sublast level for games 1,2

--- a/game2.html
+++ b/game2.html
@@ -64,6 +64,7 @@
     </div>
     <xml id="toolbox" style="display: none; background-color: #4d90fe;">
         <block type="floatto"></block>
+        <block type="uturn"></block>
         <block type="fire"></block>
     </xml>
     <xml id="startBlocks" style="display: none">
@@ -78,7 +79,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p id="modaltext">Modal body text goes here.</p>
+                    <p id="modaltext">_</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
