--- a/game0.html
+++ b/game0.html
@@ -9,7 +9,7 @@
     crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
-  <script type="text/javascript" src="js/lib/phaser.js"></script>
+  <script type="text/javascript" src="js/lib/phaser.min.js"></script>
 
   <script src="//code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
@@ -113,7 +113,29 @@
     crossorigin="anonymous"></script>
   <script>
 
-
+var options = {
+      comments: true,
+      collapse: true,
+      disable: true,
+      maxBlocks: Infinity,
+      oneBasedIndex: true,
+      readOnly: false,
+      //rtl: false,
+      //scrollbars: true,
+      trashcan: true,
+      //toolbox: null,
+      horizontalLayout: false,
+      toolboxPosition: 'start',
+      zoom: {
+        controls: false,
+        wheel: true,
+        startScale: 0.8,
+        maxScale: 4,
+        minScale: 0.25,
+        scaleSpeed: 1.1
+      }
+    };
+    
     // var element = document.getElementById('blocklyDiv');
     // var hammertime = Hammer(element).on("pinch", function (event) {
 
@@ -145,8 +167,9 @@
     var scene;
     var blocklyArea = document.getElementById('full-size');
     var blocklyDiv = document.getElementById('blocklyDiv');
-    var workspace = Blockly.inject(blocklyDiv,
-      { toolbox: document.getElementById('toolbox') });
+    options.toolbox = toolbox;
+    var workspace = Blockly.inject(blocklyDiv, options);
+    
 
     Blockly.BlockSvg.START_HAT = true;
     Blockly.Xml.domToWorkspace(document.getElementById('startBlocks'), workspace);
