--- a/game010.html
+++ b/game010.html
@@ -10,7 +10,7 @@
 
 
 
-  <script type="text/javascript" src="js/lib/phaser.js"></script>
+  <script type="text/javascript" src="js/lib/phaser.min.js"></script>
 
   <script src="//code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
