--- a/game4.html
+++ b/game4.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script type="text/javascript" src="js/lib/phaser.js"></script>
+    <script type="text/javascript" src="js/lib/phaser.min.js"></script>
     <script src="//code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/lib/plugin.min.js"></script>
     <script type="text/javascript" src="js/lib/blockly/blockly_compressed.js"></script>
@@ -105,6 +105,30 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <script>
+
+var options = {
+      comments: true,
+      collapse: true,
+      disable: true,
+      maxBlocks: 20,
+      oneBasedIndex: true,
+      readOnly: false,
+      //rtl: false,
+      //scrollbars: true,
+      trashcan: true,
+      //toolbox: null,
+      horizontalLayout: false,
+      toolboxPosition: 'start',
+      zoom: {
+        controls: false,
+        wheel: true,
+        startScale: 0.8,
+        maxScale: 4,
+        minScale: 0.25,
+        scaleSpeed: 1.1
+      }
+    };
+
             $('input[type=radio][name=options]').change(function () {
       var optionValue = this.id;
       if (optionValue == "option05") {
@@ -126,11 +150,8 @@
     });
         var blocklyArea = document.getElementById('full-size');
         var blocklyDiv = document.getElementById('blocklyDiv');
-        var workspace = Blockly.inject(blocklyDiv,
-            {
-                maxBlocks: 20,
-                toolbox: document.getElementById('toolbox')
-            });
+        options.toolbox = toolbox;
+    var workspace = Blockly.inject(blocklyDiv, options);
 
         Blockly.BlockSvg.START_HAT = true;
         //Blockly.Xml.domToWorkspace(document.getElementById('startBlocks'),  workspace);
