--- a/game_test.html
+++ b/game_test.html
@@ -11,7 +11,7 @@
 
 
   <script type="text/javascript" src="js/lib/phaser.min.js"></script>
-
+  <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
   <script src="//code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
