catch (e) Android error

--- a/game0.html
+++ b/game0.html
@@ -159,7 +159,7 @@ var options = {
 
       try {
         Pegman.tween.timeScale = timeScale;
-      } catch {
+      } catch (e) {
 
       }
 
@@ -205,7 +205,7 @@ var options = {
           if (event.newCoordinate.x < 0 && bl.type == "factory_base") {
             bl.moveBy(dx, 0);
           }
-        } catch {
+        } catch (e) {
 
         }
       }
