--- a/game1.html
+++ b/game1.html
@@ -145,7 +145,7 @@
 
       try {
         Pegman.tween.timeScale = timeScale;
-      } catch {
+      } catch (e) {
 
       }
 
@@ -192,7 +192,7 @@
           if (event.newCoordinate.x < 0 && bl.type == "factory_base") {
             bl.moveBy(dx, 0);
           }
-        } catch {
+        } catch (e) {
 
         }
       }
