--- a/game2.html
+++ b/game2.html
@@ -136,7 +136,7 @@
 
       try {
         Pegman.tween.timeScale = timeScale;
-      } catch {
+      } catch (e) {
 
       }
 
@@ -182,7 +182,7 @@
           if (event.newCoordinate.x < 0 && bl.type == "factory_base") {
             bl.moveBy(dx, 0);
           }
-        } catch {
+        } catch (e) {
 
         }
       }
