--- a/game3.html
+++ b/game3.html
@@ -146,7 +146,7 @@
 
             try {
                 Pegman.tween.timeScale = timeScale;
-            } catch {
+            } catch (e) {
 
             }
 
