--- a/game6.html
+++ b/game6.html
@@ -118,7 +118,7 @@
 
       try {
         Pegman.tween.timeScale = timeScale;
-      } catch {
+      } catch (e) {
 
       }
 
@@ -174,7 +174,7 @@
                     if (event.newCoordinate.x < 0 && bl.type == "factory_base") {
                         bl.moveBy(dx, 0);
                     }
-                } catch {
+                } catch (e) {
 
                 }
             }
