--- a/game4.html
+++ b/game4.html
@@ -143,7 +143,7 @@ var options = {
 
       try {
         Pegman.tween.timeScale = timeScale;
-      } catch {
+      } catch (e) {
 
       }
 
@@ -190,7 +190,7 @@ var options = {
                     if (event.newCoordinate.x < 0 && bl.type == "factory_base") {
                         bl.moveBy(dx, 0);
                     }
-                } catch {
+                } catch (e) {
 
                 }
             }
