--- a/game4.html
+++ b/game4.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="js/lib/blockly/blocks_compressed.js"></script>
     <script type="text/javascript" src="js/lib/blockly/javascript_compressed.js"></script>
     <script type="text/javascript" src="js/lib/blockly/msg/js/ru.js"></script>
+    <script type="text/javascript"  src="js/lib/platform.js"></script>
     <script type="text/javascript" src="js/lib/HealthBar.standalone.js"></script>
     <script type="text/javascript" src="js/blocks.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
