--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         <a href="game2.html" class="list-group-item list-group-item-action">Галактическая система координат</a>
         <a href="game3.html" class="list-group-item list-group-item-action">Конструктор уровней</a>
         <a href="game4.html" class="list-group-item list-group-item-action">Зима</a>
-        <a href="game5.html" class="list-group-item list-group-item-action">Game5</a>
-        <a href="game6.html" class="list-group-item list-group-item-action">Game6</a>
+        <a href="game5.html" class="list-group-item list-group-item-action">Game5 (в разработке)</a>
+        <a href="game6.html" class="list-group-item list-group-item-action">Game6 (в проекте)</a>
+        <a href="game0_test.html" class="list-group-item list-group-item-action">Тестовая игра 0</a>
     </div>
     </div>
     <div class="col-sm">
