--- a/schulte/index.html
+++ b/schulte/index.html
@@ -4,10 +4,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Shulz table</title>
-	<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w"
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
 	 crossorigin="anonymous">
-	 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+	 crossorigin="anonymous">
 
 	<link href="https://fonts.googleapis.com/css?family=Oxygen:400,700&amp;subset=latin-ext" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,29 +17,32 @@
 </head>
 
 <body>
-	<div class="pure-menu pure-menu-horizontal">
-		<span class="pure-menu-heading">
-			<h1>Таблицы Шульте</h1>
-		</span>
+	<div class="container-fluid">
+		<div class="uppermenu">
+			<nav class="navbar navbar-light">
+				<h1><a class="navbar-brand" href="#">Таблицы Шульте</a></h1>
+			</nav>
+		</div>
+
+		<div class="screen">
+
+		</div>
+
 	</div>
-	<!-- <nav>
-		
-	</nav> -->
-
-	<div class="screen">
-
-	</div>
-
-
 </body>
-<script src='lib/jquery-3.3.1.min.js'></script>
-<script src='lib/state-machine.min.js'></script>
-<script src="js/fsm.js"></script>
+<script>
+
+</script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+ crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+ crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+ crossorigin="anonymous"></script>
+
 <script src="js/colors.js"></script>
-<script src="js/scenes/titleScreen.js"></script>
+<script src="js/script.js"></script>
 <script src="js/scenes/chooseLevelScreen.js"></script>
 <script src="js/scenes/gameScreen.js"></script>
 <script src="js/scenes/statisticsScreen.js"></script>
-
-
 </html>
