--- a/game0_test.html
+++ b/game0_test.html
@@ -85,7 +85,7 @@ var modal = new tingle.modal({
     beforeClose: function() {
         // here's goes some logic
         // e.g. save content before closing the modal
-        // return true; // close the modal
+         return true; // close the modal
         // return false; // nothing happens
     }
 });
