--- a/game1.html
+++ b/game1.html
@@ -9,6 +9,11 @@
     crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
+  <link rel="prefetch" href="assets/images/win.png" />
+  <link rel="prefetch" href="assets/images/fail.png" />
+  <link rel="prefetch" href="assets/images/success.png" />
+
+
   <script type="text/javascript" src="js/lib/phaser.min.js"></script>
 
   <script src="//code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -77,7 +82,7 @@
   </xml>
 
   <div class="modal" tabindex="-1" role="dialog" id="exampleModal">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
 
@@ -89,7 +94,10 @@
           <p id="modaltext">Modal body text goes here.</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+            <div id="imagecontainer" class="hero">
+                <img id="mood" src="assets/images/success.png" />
+              </div>
+          <button type="button" class="btn btn-primary" data-dismiss="modal">Вперёд!</button>
         </div>
       </div>
     </div>
