--- a/game3.html
+++ b/game3.html
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="js/lib/blockly/blocks_compressed.js"></script>
     <script type="text/javascript" src="js/lib/blockly/javascript_compressed.js"></script>
     <script type="text/javascript" src="js/lib/blockly/msg/js/ru.js"></script>
-    <script type="text/javascript"  src="js/lib/platform.js"></script>
+    <script type="text/javascript" src="js/lib/platform.js"></script>
     <script type="text/javascript" src="js/blocks.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
 
@@ -84,7 +84,7 @@
         <block type="factory_base" deletable="false" x="20" y="20"></block>
     </xml>
     <div class="modal" tabindex="-1" role="dialog" id="exampleModal">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -95,6 +95,9 @@
                     <p id="modaltext"></p>
                 </div>
                 <div class="modal-footer">
+                    <div id="imagecontainer" class="hero">
+                        <img id="mood" src="assets/images/success.png" />
+                    </div>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
                 </div>
             </div>
@@ -102,14 +105,14 @@
     </div>
     <!-- include the main game file -->
     <script type="text/javascript">
-    //var workspace = Blockly.inject('blockly_editor', { toolbox: document.getElementById('toolbox') });
+        //var workspace = Blockly.inject('blockly_editor', { toolbox: document.getElementById('toolbox') });
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
+    </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+    </script>
     <script>
         var options = {
             comments: true,
@@ -181,10 +184,16 @@
         onresize();
         Blockly.svgResize(workspace);
 
-        $("#resstart").css({ "z-index": 20 });
+        $("#resstart").css({
+            "z-index": 20
+        });
         var buttonh = blocklyArea.offsetHeight - 200;
-        $("#resstart").css({ "z-index": 20 });
-        $("#resstart").css({ "top": buttonh + 'px' });
+        $("#resstart").css({
+            "z-index": 20
+        });
+        $("#resstart").css({
+            "top": buttonh + 'px'
+        });
     </script>
 </body>
 
