--- a/game1.html
+++ b/game1.html
@@ -95,7 +95,7 @@
         </div>
         <div class="modal-footer">
             <div id="imagecontainer" class="hero">
-                <img id="mood" src="assets/images/success.png" />
+                <img id="mood" src="assets/sprites/hero.png" />
               </div>
           <button type="button" class="btn btn-primary" data-dismiss="modal">Вперёд!</button>
         </div>
