--- a/game1.html
+++ b/game1.html
@@ -159,6 +159,7 @@
       }
 
     });
+    var lastSuccessfullPosition; //хранит положение какое было у спрайта когда он в последний раз соверлаппился с целью
 
     var scene;
     var blocklyArea = document.getElementById('full-size');
