--- a/game4.html
+++ b/game4.html
@@ -20,17 +20,16 @@
     <script type="text/javascript" src="js/lib/blockly/msg/js/ru.js"></script>
     <script type="text/javascript" src="js/lib/platform.js"></script>
     <script type="text/javascript" src="js/lib/HealthBar.standalone.js"></script>
-    <script type="text/javascript" src="js/blocks.js"></script>
+    
+    <script type="text/javascript"  src="js/lib/platform.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
-
     <script type="text/javascript" src="js/maze.js"></script>
     <script type="text/javascript" src="js/pegman.js"></script>
-
     <script type="text/javascript" src="js/game4/Boot.js"></script>
     <script type="text/javascript" src="js/game4/Preload.js"></script>
     <script type="text/javascript" src="js/game4/lesson4.js"></script>
-
-
+  
+    <script type="text/javascript" src="js/blocks.js"></script>
     <script type="text/javascript" src="js/game4/main.js"></script>
     <style>
         .blocklySvg {
@@ -113,6 +112,8 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
     </script>
     <script>
+        var scene;
+        
         var options = {
             comments: true,
             collapse: true,
