index.html отредактирован онлайн на Bitbucket

--- a/asteroid/index.html
+++ b/asteroid/index.html
@@ -22,15 +22,15 @@
 				<img id = "laser" src="img/laserBeam2.png" class = "spaceShip">
 				<img id = "spaceShip" src="img/spaceShipStanding.png" class = "spaceShip">
 				<div class = "Asteroids" id = "Asteroid0">
-					<img class="image" src="img/Asteroid0.png">
+					<img class="image" src="img/asteroid0.png">
 					<div class = "AsteroidNumber" id = "Number0"> 5 </div>
 				</div>
 				<div class = "Asteroids" id = "Asteroid1">
-					<img class="image" src="img/Asteroid1.png">
+					<img class="image" src="img/asteroid1.png">
 					<div class = "AsteroidNumber" id = "Number1"> 10 </div>
 				</div>
 				<div class = "Asteroids" id = "Asteroid2">
-					<img class="image" src="img/Asteroid2.png">
+					<img class="image" src="img/asteroid2.png">
 					<div class = "AsteroidNumber" id = "Number2"> 15 </div>
 				</div>
 			</div>
