--- a/game0.html
+++ b/game0.html
@@ -94,7 +94,7 @@
             <div id="imagecontainer" class="hero">
                 <img id="mood" src="assets/sprites/hero.png" />
               </div>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+          <button type="button" class="btn btn-primary" data-dismiss="modal">Вперёд!</button>
         </div>
       </div>
     </div>
